--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boring-avatars",
+  "name": "@flipxyz/boring-avatars",
   "description": "Boring avatars is a tiny JavaScript React library that generates custom, SVG-based, round avatars from any username and color palette.",
   "homepage": "https://boringavatars.com/",
   "version": "1.7.0",
